--- a/gdsc/src/index.css
+++ b/gdsc/src/index.css
@@ -1,3 +1,11 @@
-*{
+* {
     font-family: 'Poppins', sans-serif;
+}
+
+@media screen and (max-width:768px) {
+
+    html,
+    body {
+        overflow-x: hidden;
+    }
 }
